Added logging of source bucket IAM/ACLs. Added feature to use GOOGLE_APPLICATION_CREDENTIALS if one or more service account keys are not provided. Added unit tests.

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,11 @@
 [tox]
 envlist = py27
 
+[testenv:unittest]
+changedir = tests
+commands = discover
+deps = discover
+
 [testenv:package]
 deps = pex
 commands = pex . -f ./eggs -v --disable-cache -r requirements.txt -e gcs_bucket_mover.cli:main -o package/gcs-bucket-mover.pex --platform linux-x86_64-cp-27-mu --platform macosx_10_13_x86_64
