--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==3.0.4            # via requests
 configargparse==0.13.0
 enum34==1.1.6             # via google-cloud-pubsub, grpcio
 faker==1.0.1
+funcsigs==1.0.2           # via mock
 futures==3.2.0            # via google-api-core, grpcio
 google-api-core[grpc]==1.7.0  # via google-cloud-core, google-cloud-logging, google-cloud-pubsub, google-cloud-storage
 google-api-python-client==1.7.7
@@ -27,7 +28,9 @@ grpcio==1.17.1            # via google-api-core, googleapis-common-protos, grpc-
 httplib2==0.12.0          # via google-api-python-client, google-auth-httplib2, oauth2client
 idna==2.8                 # via requests
 ipaddress==1.0.22         # via faker
+mock==2.0.0
 oauth2client==4.1.3
+pbr==5.1.3                # via mock
 protobuf==3.6.1           # via google-api-core, googleapis-common-protos
 pyasn1-modules==0.2.2     # via google-auth, oauth2client
 pyasn1==0.4.4             # via oauth2client, pyasn1-modules, rsa
@@ -37,7 +40,7 @@ pyyaml==3.13
 requests==2.21.0          # via google-api-core
 retrying==1.3.3
 rsa==4.0                  # via google-auth, oauth2client
-six==1.12.0               # via faker, google-api-core, google-api-python-client, google-auth, google-resumable-media, grpcio, oauth2client, protobuf, python-dateutil, retrying
+six==1.12.0               # via faker, google-api-core, google-api-python-client, google-auth, google-resumable-media, grpcio, mock, oauth2client, protobuf, python-dateutil, retrying
 text-unidecode==1.2       # via faker
 uritemplate==3.0.0        # via google-api-python-client
 urllib3==1.24.1           # via requests
